Select relevant solution

--- a/MoonSweep.ipynb
+++ b/MoonSweep.ipynb
@@ -39,28 +39,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(D*cos(alpha) - sqrt(-D**2*sin(alpha)**2 + R**2), (D*cos(alpha) - sqrt(-D**2*sin(alpha)**2 + R**2))*sin(alpha), D*sin(alpha)**2 + sqrt(-D**2*sin(alpha)**2 + R**2)*cos(alpha))\n",
+      "(D*cos(alpha) + sqrt(-D**2*sin(alpha)**2 + R**2), (D*cos(alpha) + sqrt(-D**2*sin(alpha)**2 + R**2))*sin(alpha), D*sin(alpha)**2 - sqrt(-D**2*sin(alpha)**2 + R**2)*cos(alpha))\n"
+     ]
+    },
+    {
      "data": {
+      "text/latex": [
+       "$\\displaystyle D \\sin^{2}{\\left(\\alpha \\right)} + \\sqrt{- D^{2} \\sin^{2}{\\left(\\alpha \\right)} + R^{2}} \\cos{\\left(\\alpha \\right)}$"
+      ],
       "text/plain": [
-       "[((D*cos(alpha) - sqrt(-D**2*sin(alpha)**2 + R**2))*sin(alpha),\n",
-       "  D*sin(alpha)**2 + sqrt(-D**2*sin(alpha)**2 + R**2)*cos(alpha),\n",
-       "  D*cos(alpha) - sqrt(-D**2*sin(alpha)**2 + R**2)),\n",
-       " ((D*cos(alpha) + sqrt(-D**2*sin(alpha)**2 + R**2))*sin(alpha),\n",
-       "  D*sin(alpha)**2 - sqrt(-D**2*sin(alpha)**2 + R**2)*cos(alpha),\n",
-       "  D*cos(alpha) + sqrt(-D**2*sin(alpha)**2 + R**2))]"
+       "D*sin(alpha)**2 + sqrt(-D**2*sin(alpha)**2 + R**2)*cos(alpha)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
-    "solve([a*a + b*b - R*R, a - L*sin(alpha), D - b - L*cos(alpha)], a, b, L)"
+    "geometry = solve([a*a + b*b - R*R, a - L*sin(alpha), D - b - L*cos(alpha)], L, a, b)\n",
+    "print( geometry[0] )\n",
+    "print( geometry[1] )\n",
+    "# select the relevant solution (must be less than D):\n",
+    "geometry[0][0]\n",
+    "#geometry[0][1]\n",
+    "#geometry[0][2]"
    ]
   }
  ],
