--- a/MoonSweep.ipynb
+++ b/MoonSweep.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -53,13 +53,13 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle D \\sin^{2}{\\left(\\alpha \\right)} + \\sqrt{- D^{2} \\sin^{2}{\\left(\\alpha \\right)} + R^{2}} \\cos{\\left(\\alpha \\right)}$"
+       "$\\displaystyle D \\cos{\\left(\\alpha \\right)} - \\sqrt{- D^{2} \\sin^{2}{\\left(\\alpha \\right)} + R^{2}}$"
       ],
       "text/plain": [
-       "D*sin(alpha)**2 + sqrt(-D**2*sin(alpha)**2 + R**2)*cos(alpha)"
+       "D*cos(alpha) - sqrt(-D**2*sin(alpha)**2 + R**2)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,9 +70,11 @@
     "print( geometry[0] )\n",
     "print( geometry[1] )\n",
     "# select the relevant solution (must be less than D):\n",
-    "geometry[0][0]\n",
-    "#geometry[0][1]\n",
-    "#geometry[0][2]"
+    "pathLength = geometry[0][0]\n",
+    "surfacePointVertical = geometry[0][1]\n",
+    "surfacePointHorizontal = geometry[0][2]\n",
+    "#print(pathLength, surfacePointVertical, surfacePointHorizontal)\n",
+    "pathLength"
    ]
   }
  ],
