Define more values and functions

--- a/MoonSweep.ipynb
+++ b/MoonSweep.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,25 @@
       "(D*cos(alpha) - sqrt(-D**2*sin(alpha)**2 + R**2), (D*cos(alpha) - sqrt(-D**2*sin(alpha)**2 + R**2))*sin(alpha), D*sin(alpha)**2 + sqrt(-D**2*sin(alpha)**2 + R**2)*cos(alpha))\n",
       "(D*cos(alpha) + sqrt(-D**2*sin(alpha)**2 + R**2), (D*cos(alpha) + sqrt(-D**2*sin(alpha)**2 + R**2))*sin(alpha), D*sin(alpha)**2 - sqrt(-D**2*sin(alpha)**2 + R**2)*cos(alpha))\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "\n",
+    "geometry = solve([a*a + b*b - R*R, a - L*sin(alpha), D - b - L*cos(alpha)], L, a, b)\n",
+    "print( geometry[0] )\n",
+    "print( geometry[1] )\n",
+    "# select the relevant solution (must be less than D) \n",
+    "pathLength = Lambda(alpha, geometry[0][0])  # define as function of alpha\n",
+    "surfacePointVertical = geometry[0][1]\n",
+    "surfacePointHorizontal = geometry[0][2]\n",
+    "#print(pathLength, surfacePointVertical, surfacePointHorizontal)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/latex": [
@@ -59,22 +77,130 @@
        "D*cos(alpha) - sqrt(-D**2*sin(alpha)**2 + R**2)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "geometry = solve([a*a + b*b - R*R, a - L*sin(alpha), D - b - L*cos(alpha)], L, a, b)\n",
-    "print( geometry[0] )\n",
-    "print( geometry[1] )\n",
-    "# select the relevant solution (must be less than D):\n",
-    "pathLength = geometry[0][0]\n",
-    "surfacePointVertical = geometry[0][1]\n",
-    "surfacePointHorizontal = geometry[0][2]\n",
-    "#print(pathLength, surfacePointVertical, surfacePointHorizontal)\n",
     "pathLength"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle D \\sin^{2}{\\left(\\alpha \\right)} + \\sqrt{- D^{2} \\sin^{2}{\\left(\\alpha \\right)} + R^{2}} \\cos{\\left(\\alpha \\right)}$"
+      ],
+      "text/plain": [
+       "D*sin(alpha)**2 + sqrt(-D**2*sin(alpha)**2 + R**2)*cos(alpha)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "surfacePointHorizontal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left(D \\cos{\\left(\\alpha \\right)} - \\sqrt{- D^{2} \\sin^{2}{\\left(\\alpha \\right)} + R^{2}}\\right) \\sin{\\left(\\alpha \\right)}$"
+      ],
+      "text/plain": [
+       "(D*cos(alpha) - sqrt(-D**2*sin(alpha)**2 + R**2))*sin(alpha)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "surfacePointVertical"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\operatorname{asin}{\\left(\\frac{\\left(D \\cos{\\left(\\alpha \\right)} - \\sqrt{- D^{2} \\sin^{2}{\\left(\\alpha \\right)} + R^{2}}\\right) \\sin{\\left(\\alpha \\right)}}{R} \\right)}$"
+      ],
+      "text/plain": [
+       "asin((D*cos(alpha) - sqrt(-D**2*sin(alpha)**2 + R**2))*sin(alpha)/R)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Angle of the surface point\n",
+    "beta = asin(surfacePointVertical/R)\n",
+    "beta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Minimum and maximum ray distances\n",
+    "L_min = D - R\n",
+    "L_max = sqrt(D*D - R*R)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Maximum angle of Moon (full moon appears with angular diameter 2 * alpha_max)\n",
+    "alpha_max = asin(L_max/R)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left( \\alpha \\mapsto \\operatorname{asin}{\\left(\\frac{\\left(D \\cos{\\left(\\alpha \\right)} - \\sqrt{- D^{2} \\sin^{2}{\\left(\\alpha \\right)} + R^{2}}\\right) \\sin{\\left(\\alpha \\right)}}{R} \\right)} \\right)$"
+      ],
+      "text/plain": [
+       "Lambda(alpha, asin((D*cos(alpha) - sqrt(-D**2*sin(alpha)**2 + R**2))*sin(alpha)/R))"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Define a function for the surface angle beta with argument alpha\n",
+    "surfaceAngle = Lambda(alpha, beta)\n",
+    "surfaceAngle"
    ]
   }
  ],
