--- a/MoonSweep.ipynb
+++ b/MoonSweep.ipynb
@@ -26,8 +26,7 @@
     "import sympy\n",
     "from sympy import *\n",
     "\n",
-    "# Constants\n",
-    "#x, y, s, sq = symbols('x y s sq', positive=True) #, real=True)\n",
+    "# Parameters for the calculations\n",
     "\n",
     "c = symbols('c', positive=True ) # Speed of light in vacuum\n",
     "R = symbols('R', positive=True ) # Radius of the Moon (target sphere)\n",
@@ -36,8 +35,8 @@
     "omega = symbols('omega')         # Angular velocity of laser pointer movement\n",
     "T = symbols('T')                 # Sweep duration\n",
     "L = symbols('L', positive=True ) # Flight path length (distance Earth - Moon surface point)\n",
-    "a, b = symbols('a b', positive=True ) # y and x coordinates of Moon surface point\n",
-    "t = symbols('t')  # time in seconds\n"
+    "a, b = symbols('a b')            # coordinates of Moon surface point\n",
+    "t = symbols('t')                 # time in seconds\n"
    ]
   },
   {
