Reworked substitutions; updated readme

--- a/MoonSweep.ipynb
+++ b/MoonSweep.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 515,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 516,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 517,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
        "Lambda(alpha, D*cos(alpha) - sqrt(-D**2*sin(alpha)**2 + R**2))"
       ]
      },
-     "execution_count": 335,
+     "execution_count": 517,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 518,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
        "D*sin(alpha)**2 + sqrt(-D**2*sin(alpha)**2 + R**2)*cos(alpha)"
       ]
      },
-     "execution_count": 336,
+     "execution_count": 518,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 519,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
        "(D*cos(alpha) - sqrt(-D**2*sin(alpha)**2 + R**2))*sin(alpha)"
       ]
      },
-     "execution_count": 337,
+     "execution_count": 519,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 520,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "asin((D*cos(alpha) - sqrt(-D**2*sin(alpha)**2 + R**2))*sin(alpha)/R)"
       ]
      },
-     "execution_count": 338,
+     "execution_count": 520,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 521,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 522,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 523,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
        "Lambda(alpha, asin((D*cos(alpha) - sqrt(-D**2*sin(alpha)**2 + R**2))*sin(alpha)/R))"
       ]
      },
-     "execution_count": 341,
+     "execution_count": 523,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 524,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
        "Lambda(t, omega*t + asin(R/D))"
       ]
      },
-     "execution_count": 342,
+     "execution_count": 524,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 525,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,19 +252,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 526,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Values for Earth - Moon system\n",
     "speedOfLight = 300000.0      # speed of light in vacuum (km/s)\n",
     "distanceEarthMoon = 382500.0 # distance Earth - Moon (average) (km)\n",
-    "moonRadius = 1737.5          # Moon radius (km)"
+    "moonRadius = 1737.5          # Moon radius (km)\n",
+    "\n",
+    "# Dictionary for substitution into analytic formulas:\n",
+    "earthMoonSystem = {D: distanceEarthMoon, R: moonRadius, c: speedOfLight}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 527,
    "metadata": {},
    "outputs": [
     {
@@ -276,20 +279,20 @@
        "Lambda(alpha, asin(0.000575539568345324*(-382500.0*sqrt(2.06341578025546e-5 - sin(alpha)**2) + 382500.0*cos(alpha))*sin(alpha)))"
       ]
      },
-     "execution_count": 345,
+     "execution_count": 527,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Replace variables with values for Earth - Moon system\n",
-    "surfaceAngleMoon = surfaceAngle.subs([(D, distanceEarthMoon), (R, moonRadius)])\n",
+    "surfaceAngleMoon = surfaceAngle.evalf(subs=earthMoonSystem)\n",
     "surfaceAngleMoon"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 528,
    "metadata": {},
    "outputs": [
     {
@@ -312,25 +315,25 @@
     {
      "data": {
       "text/plain": [
-       "<sympy.plotting.backends.matplotlibbackend.matplotlib.MatplotlibBackend at 0x11035a060>"
+       "<sympy.plotting.backends.matplotlibbackend.matplotlib.MatplotlibBackend at 0x113614bf0>"
       ]
      },
-     "execution_count": 346,
+     "execution_count": 528,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# \n",
-    "alphaStartMoon = alphaStart.subs([(D, distanceEarthMoon), (R, moonRadius)])\n",
-    "alphaEndMoon = alphaEnd.subs([(D, distanceEarthMoon), (R, moonRadius)])\n",
+    "alphaStartMoon = alphaStart.evalf(subs=earthMoonSystem)\n",
+    "alphaEndMoon = alphaEnd.evalf(subs=earthMoonSystem)\n",
     "print(alphaStartMoon, alphaEndMoon)\n",
     "plot(surfaceAngleMoon(alpha), (alpha, alphaStartMoon, alphaEndMoon))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 529,
    "metadata": {},
    "outputs": [
     {
@@ -346,17 +349,17 @@
     {
      "data": {
       "text/plain": [
-       "<sympy.plotting.backends.matplotlibbackend.matplotlib.MatplotlibBackend at 0x1102c4aa0>"
+       "<sympy.plotting.backends.matplotlibbackend.matplotlib.MatplotlibBackend at 0x11ec6b560>"
       ]
      },
-     "execution_count": 347,
+     "execution_count": 529,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#\n",
-    "pathLengthMoon = pathLength.subs([(D, distanceEarthMoon), (R, moonRadius)])\n",
+    "pathLengthMoon = pathLength.evalf(subs=earthMoonSystem)\n",
     "pathLengthMoon\n",
     "\n",
     "plot(pathLengthMoon(alpha), (alpha, alphaStartMoon, alphaEndMoon))"
@@ -364,7 +367,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 530,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle - \\frac{2 \\operatorname{asin}{\\left(\\frac{R}{D} \\right)}}{T}$"
+      ],
+      "text/plain": [
+       "-2*asin(R/D)/T"
+      ]
+     },
+     "execution_count": 530,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sweep dynamics\n",
+    "angularSpeed = (alphaEnd - alphaStart) / T               # Angular Sweep speed in rad/sec\n",
+    "angularSpeed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 531,
    "metadata": {},
    "outputs": [
     {
@@ -376,21 +404,19 @@
        "Lambda(t, t + (D*cos(omega*t + asin(R/D)) - sqrt(-D**2*sin(omega*t + asin(R/D))**2 + R**2))/c)"
       ]
      },
-     "execution_count": 348,
+     "execution_count": 531,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Sweep dynamics\n",
-    "angularSpeed = (alphaEnd - alphaStart) / T               # Angular Sweep speed in rad/sec\n",
     "arrivalTime = Lambda(t, t + pathLength(sweepAngle(t))/c) # Arrival time at moon service as function of time\n",
     "arrivalTime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 532,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +428,7 @@
        "D*sqrt(1 - R**2/D**2)/c"
       ]
      },
-     "execution_count": 349,
+     "execution_count": 532,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 533,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,14 +449,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 534,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.00571864866213344\n"
+      "Lambda(t, t - 1.275*(2.06341578025546e-5 - sin(0.90849985639931*t - 0.00454249928199655)**2)**0.5 + 1.275*cos(0.90849985639931*t - 0.00454249928199655))\n",
+      "Max arrival time with image doubling: 0.00571864866213344\n"
      ]
     },
     {
@@ -446,10 +473,10 @@
     {
      "data": {
       "text/plain": [
-       "<sympy.plotting.backends.matplotlibbackend.matplotlib.MatplotlibBackend at 0x1103598e0>"
+       "<sympy.plotting.backends.matplotlibbackend.matplotlib.MatplotlibBackend at 0x1105f8650>"
       ]
      },
-     "execution_count": 351,
+     "execution_count": 534,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,13 +484,24 @@
    "source": [
     "# Arrival time for Earth - Moon system:\n",
     "sweepDuration = 0.01          # Sweep duration in seconds\n",
-    "angularSpeedMoon = angularSpeed.subs([(D, distanceEarthMoon), (R, moonRadius), (T, sweepDuration)])\n",
-    "arrivalTimeMoon = arrivalTime.subs([(D, distanceEarthMoon), (R, moonRadius), (c, speedOfLight), (omega, angularSpeedMoon)])\n",
+    "\n",
+    "# Dictionary for replacing values into formulas\n",
+    "sweepDynamic = {T: sweepDuration, omega: angularSpeed}\n",
+    "\n",
+    "# Get Moon arrival time as function of time (= departure time from Earth)\n",
+    "arrivalTimeMoon = arrivalTime.evalf(subs=sweepDynamic).evalf(subs=earthMoonSystem).evalf(subs=sweepDynamic)\n",
+    "print(arrivalTimeMoon)\n",
+    "\n",
+    "# The maximum arrival time is for the end of the sweep: \n",
+    "maxArrivalTimeMoon = sweepDuration + arrivalTimeMoon(0)\n",
     "\n",
     "# Calculate the time when arrival time is same as arrival time at farthest distance\n",
     "# This is the maximum arrival time where 2 points have the same arrival time\n",
+    "# Open issue: this numerical solution is returned as a complex number with a very small imaginary part.\n",
+    "# - Have not yet found a way around that other than taking the real part only.\n",
+    "# - Maybe use a SciPy solver (see https://docs.sympy.org/latest/guides/solving/solve-numerically.html)\n",
     "maxDupTime = re(nsolve(arrivalTimeMoon(t) - arrivalTimeMoon(0), 1)) #without re() it may return a tiny imaginary part\n",
-    "print( maxDupTime )\n",
+    "print( 'Max arrival time with image doubling:', maxDupTime )\n",
     "\n",
     "\n",
     "plot(arrivalTimeMoon(t), (t, 0, maxDupTime*1.1))\n",
@@ -472,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 535,
    "metadata": {},
    "outputs": [
     {
@@ -495,10 +533,10 @@
     {
      "data": {
       "text/plain": [
-       "<sympy.plotting.backends.matplotlibbackend.matplotlib.MatplotlibBackend at 0x11edeb0e0>"
+       "<sympy.plotting.backends.matplotlibbackend.matplotlib.MatplotlibBackend at 0x111f69520>"
       ]
      },
-     "execution_count": 352,
+     "execution_count": 535,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,8 +544,9 @@
    "source": [
     "# Calculate shortest arrival time (numerically, no analytic solution)\n",
     "# Need to set starting range > 0 because derivative is (-) infinite at t = 0\n",
+    "# Issue: some sweep times result in numerical overflows for certain calculations\n",
     "\n",
-    "shortestArrivalTime = nsolve(diff(arrivalTimeMoon(t)), (maxDupTime*0.01, maxDupTime*1.1))\n",
+    "shortestArrivalTime = nsolve(diff(arrivalTimeMoon(t)), (maxDupTime*0.001, maxDupTime*1.001))\n",
     "print('Shortest arrival time:', shortestArrivalTime)\n",
     "\n",
     "plot(diff(arrivalTimeMoon(t), t), (t, maxDupTime*0.1, maxDupTime*1.1))"
@@ -515,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 536,
    "metadata": {},
    "outputs": [
     {
@@ -531,10 +570,10 @@
     {
      "data": {
       "text/plain": [
-       "<sympy.plotting.backends.matplotlibbackend.matplotlib.MatplotlibBackend at 0x11ee7b0e0>"
+       "<sympy.plotting.backends.matplotlibbackend.matplotlib.MatplotlibBackend at 0x111eb81a0>"
       ]
      },
-     "execution_count": 353,
+     "execution_count": 536,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 537,
    "metadata": {},
    "outputs": [
     {
@@ -562,10 +601,10 @@
     {
      "data": {
       "text/plain": [
-       "<sympy.plotting.backends.matplotlibbackend.matplotlib.MatplotlibBackend at 0x11e29fef0>"
+       "<sympy.plotting.backends.matplotlibbackend.matplotlib.MatplotlibBackend at 0x111dcaa20>"
       ]
      },
-     "execution_count": 354,
+     "execution_count": 537,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 538,
    "metadata": {},
    "outputs": [
     {
@@ -593,17 +632,17 @@
     {
      "data": {
       "text/plain": [
-       "<sympy.plotting.backends.matplotlibbackend.matplotlib.MatplotlibBackend at 0x1103f3bf0>"
+       "<sympy.plotting.backends.matplotlibbackend.matplotlib.MatplotlibBackend at 0x113ad7e30>"
       ]
      },
-     "execution_count": 355,
+     "execution_count": 538,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Parametric plot point angle moon centric, arrival time, with parameter = time\n",
-    "sweepAngleMoon = sweepAngle.subs([(D, distanceEarthMoon), (R, moonRadius), (T, sweepDuration), (omega, angularSpeedMoon)])\n",
+    "sweepAngleMoon = sweepAngle.evalf(subs=sweepDynamic).evalf(subs=earthMoonSystem).evalf(subs=sweepDynamic)\n",
     "plot_parametric(arrivalTimeMoon(t), (180.0/pi)*surfaceAngleMoon(sweepAngleMoon(t)), (t, 0, sweepDuration), \n",
     "                legend=True,\n",
     "                label='Parametric plot: Angle (moon centric) vs Arrival Time, for time',\n",
